[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "adk-database-memory"
version = "0.1.0"
description = "SQL-backed memory service for the Google Agent Development Kit (ADK). Supports SQLite, PostgreSQL, MySQL/MariaDB and any async SQLAlchemy dialect."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anmol Jaiswal", email = "anmolgupta71197@gmail.com" }]
keywords = ["adk", "agent-development-kit", "memory", "sqlalchemy", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "google-adk>=1.0.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "typing-extensions>=4.5,<5",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.21.0"]
postgres = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]
test = [
  "aiosqlite>=0.21.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]
dev = [
  "aiosqlite>=0.21.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/anmolg1997/adk-database-memory"
Repository = "https://github.com/anmolg1997/adk-database-memory"
Issues = "https://github.com/anmolg1997/adk-database-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_database_memory"]

[tool.hatch.build.targets.sdist]
include = [
  "src/adk_database_memory",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
